css fix add bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*
   General Styles Information
 */
+body{ text-transform: uppercase;}
 .left{ float: left; }
 .right{ float:right;}
 .padTop5{ padding-top: 5px;}
@@ -53,7 +54,7 @@
     background-color: #f27f7f;
 }
 .add{
-  padding: 14px;
+  padding-top: 14px;
   border-bottom: 1px solid #e7e7e7;
   background-color: #f7f7f7;
 }
